--- a/mediaquery.css
+++ b/mediaquery.css
@@ -86,7 +86,7 @@
 
 .cart{
 
-padding: 15px 200px;
+padding: 15px 201px;
 justify-content: center;
 text-align: center;
   position: absolute;
@@ -141,7 +141,9 @@ text-align: center;
 
 }
 
-
+.cart-item, .item-info{
+  width: 100%;
+}
 
 }
 
