--- a/mediaquery.css
+++ b/mediaquery.css
@@ -46,17 +46,21 @@
 @media (max-width: 976px) {
   .container-card {
     display: grid;
-    margin-left: 60px;
+    margin-left: 80px;
   }
 
 #titulo-productos{
   margin-left: 130px;
 }
 
+.item-handler{
+  margin-left: 98px;
+}
+
   .container-card2 {
     display: flex;
     flex-direction: column;
-    margin-left: 60px;
+    margin-left: 80px;
   }
 }
 
@@ -92,7 +96,7 @@
 
 .cart{
 
-padding: 15px 201px;
+padding: 15px 150px;
 justify-content: center;
 text-align: center;
   position: absolute;
@@ -181,5 +185,16 @@ text-align: center;
     display: flex;
     flex-direction: column;
   }
-  
+  .container-card {
+    display: flex;
+    flex-direction: column;
+    margin-left: 25px;
+  }
+  .container-card2 {
+    display: flex;
+    flex-direction: column;
+    margin-left: 25px;
+  }
+
+
 }
